[project]
name = "ptncli"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Kenneth Ashley", email = "ken.u.diggitt@gmail.com" }]
dependencies = [
  "typer>=0.9.0",
  "bittensor-cli>=9.7.1",
  "bittensor-wallet>=3.1.0",
  "collateral_sdk @ git+https://github.com/taoshidev/collateral_sdk",
  "bittensor>=9.8.0",
  "web3>=7.12.0",
  "rich>=13.0.0",
]
requires-python = "<3.14,>=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project.scripts]
ptncli = "ptncli.__main__:app"

[tool.pdm]
distribution = true
